getLast() does not work with List interface